--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "axios": "^1.3.5",
+    "dotenv": "^16.0.3",
     "mqtt": "^4.3.7",
-    "onoff": "^6.0.3"
+    "onoff": "^6.0.3",
+    "qs": "^6.11.1"
   }
 }
